# meigen

./: CHANGELOG.md  README.md  meigen.cabal
app/: Main.hs
design/: spec.md
src/: Cli.hs  Parser.hs  Semantic.hs  SimpleParser.hs
tests/: basic.mg
